<resources>
    <string name="app_name">WikiWalks</string>

    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="submit_prompt">Submit?</string>
    <string name="you">You</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>

    <string name="miles">mi</string>
    <string name="kilometres">km</string>
    <string name="metres">metres</string>
    <string name="feet">feet</string>

    <string name="off_track">You are %d %s away</string>
    <string name="direction_arrow">Direction Arrow</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="resume_recording">Resume Recording</string>

    <string name="new_path">New Path</string>
    <string name="create_new_path">Create New Path</string>
    <string name="new_path_prompt">Make New Path?</string>
    <string name="new_path_info">Your route does not connect to the path and cannot be submitted. Make it a new path instead?</string>
    <string name="get_path_failure">Failed to get path…</string>
    <string name="get_paths_failure">Failed to get paths…</string>
    <string name="save_path_success">Saved path successfully!</string>
    <string name="save_path_failure">Failed to save path…</string>
    <string name="walk_count_once">Path has been walked once.</string>
    <string name="walk_count_multiple">Path has been walked %d times.</string>

    <string name="new_route">New Route - %s</string>
    <string name="routes_title">Routes - %s</string>
    <string name="route_format">Route %d - %s</string>
    <string name="distance_format">Route %d - %.2f %s</string>
    <string name="select_route">Select Route</string>
    <string name="record_new_route">Record New Route</string>
    <string name="explore">Explore</string>
    <string name="delete_route">Delete Route</string>
    <string name="delete_route_prompt">Delete Route?</string>
    <string name="save_route_success">Saved route successfully!</string>
    <string name="save_route_failure">Failed to save route…</string>
    <string name="delete_route_success">Deleted route successfully!</string>
    <string name="delete_route_failure">Failed to delete route…</string>

    <string name="points_of_interest">Points of Interest</string>
    <string name="points_of_interest_title">Points of Interest - %s</string>
    <string name="point_of_interest_description">Point of interest on %s</string>
    <string name="mark_point">Mark Point</string>
    <string name="no_points_of_interest">No points of interest!</string>
    <string name="delete_point_of_interest_prompt">Delete Point of Interest?</string>
    <string name="save_point_of_interest_success">Saved point of interest successfully!</string>
    <string name="save_point_of_interest_failure">Failed to save point of interest…</string>
    <string name="delete_point_of_interest_success">Deleted point of interest successfully!</string>
    <string name="delete_point_of_interest_failure">Failed to delete point of interest…</string>

    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="photos_title">Photos - %s</string>
    <string name="caption">Caption</string>
    <string name="no_photos">No photos!</string>
    <string name="add_photo">Add Photo</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="delete_photo_prompt">Delete Photo?</string>
    <string name="get_photos_failure">Failed to get photos…</string>
    <string name="no_more_photos">No more photos!</string>
    <string name="save_photo_success">Saved photo successfully!</string>
    <string name="save_photo_failure">Failed to save photo…</string>
    <string name="delete_photo_success">Deleted photo successfully!</string>
    <string name="delete_photo_failure">Failed to delete photo…</string>
    <string name="photo_no_caption">no caption written</string>

    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="reviews_title">Reviews - %s</string>
    <string name="review_no_text">no review written</string>
    <string name="no_reviews">No reviews!</string>
    <string name="write_review">Write Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review_prompt">Delete Review?</string>
    <string name="get_reviews_failure">Failed to get reviews…</string>
    <string name="no_more_reviews">No more reviews!</string>
    <string name="save_review_success">Saved review successfully!</string>
    <string name="save_review_failure">Failed to save review…</string>
    <string name="delete_review_success">Deleted review successfully!</string>
    <string name="delete_review_failure">Failed to delete review…</string>

    <string name="group_walk">Group Walk</string>
    <string name="group_walks">Group Walks</string>
    <string name="group_walks_title">Group Walks - %s</string>
    <string name="group_walk_host">Host: %s</string>
    <string name="group_walk_attendees">Attendees: %s</string>
    <string name="no_attendees">no attendees</string>
    <string name="no_walks_scheduled">No walks scheduled!</string>
    <string name="schedule_group_walk">Schedule Group Walk</string>
    <string name="select_time">Select Time</string>
    <string name="attend_group_walk_prompt">Attend Group Walk?</string>
    <string name="cancel_group_walk_attendance_prompt">Cancel Attendance?</string>
    <string name="cancel_group_walk_prompt">Cancel Group Walk?</string>
    <string name="get_group_walks_failure">Failed to get group walks…</string>
    <string name="save_group_walk_success">Saved group walk successfully!</string>
    <string name="save_group_walk_failure">Failed to save group walk…</string>
    <string name="delete_group_walk_success">Cancelled group walk successfully!</string>
    <string name="delete_group_walk_failure">Failed to cancel group walk…</string>
    <string name="toggle_group_walk_attendance_success">Updated group walk attendance successfully!</string>
    <string name="toggle_group_walk_attendance_failure">Failed to update group walk attendance…</string>

    <string name="statistics">Statistics</string>
    <string name="distance_walked">Distance Walked - %.2f %s</string>
    <string name="earth_circumference_walked">🌎\'s Circumference Walked - %.6f%%</string>
    <string name="longest_walk">Longest Walk - %.2f %s</string>
    <string name="average_walk">Average Walk - %.2f %s</string>
    <string name="average_walk_n_a">Average Walk - N/A</string>
    <string name="times_walked">Times Walked - %d</string>
    <string name="routes_recorded">Routes Recorded - %d</string>
    <string name="points_marked">Points of Interest Marked - %d</string>
    <string name="reviews_written">Reviews Written - %d</string>
    <string name="photos_uploaded">Photos Uploaded - %d</string>

    <string name="goal">Goal</string>
    <string name="goals">Goals</string>
    <string name="no_goals">No goals!</string>
    <string name="set_goal">Set Goal</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="goal_ends">Goal ends: %s</string>
    <string name="distance">Distance</string>
    <string name="invalid_distance">Invalid distance entered!</string>
    <string name="date_range">%s - %s</string>
    <string name="progress">%.2f / %.2f %s</string>
    <string name="delete_goal">Delete goal?</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="no_bookmarks">No bookmarks!</string>

    <string name="settings_title">Settings</string>
    <string name="set_name">Set Display Name</string>
    <string name="import_data">Import Data</string>
    <string name="export_data">Export Data</string>
    <string name="save_name_success">Saved name successfully!</string>
    <string name="save_name_failure">Failed to delete name…</string>
    <string name="import_data_success">Imported data successfully!</string>
    <string name="import_data_failure">Failed to import data…</string>
    <string name="export_data_success">Exported data successfully!</string>
    <string name="export_data_failure">Failed to export data…</string>

    <string name="open_settings">Open Settings</string>
    <string name="requires_location">WikiWalks needs location permissions to run.</string>
    <string name="requires_storage">WikiWalks needs storage permissions to submit photos and import/export settings.</string>

    <string name="report_title">Report</string>
    <string name="report_info">Report Info</string>
    <string name="report_success">Report submitted successfully!</string>
    <string name="report_failure">Failed to submit report…</string>
</resources>
