<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/edit_picture_popup_selected_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="300dp"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/picture_popup_camera_button"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="monospace"
            android:text="@string/from_camera"
            app:layout_constraintEnd_toStartOf="@id/picture_popup_gallery_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_picture_popup_selected_image" />

        <Button
            android:id="@+id/picture_popup_gallery_button"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/from_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/picture_popup_camera_button"
            app:layout_constraintTop_toBottomOf="@id/edit_picture_popup_selected_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_picture_popup_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caption"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture_popup_camera_button">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:maxLength="200" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_picture_popup_submit_button"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:fontFamily="monospace"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@id/edit_picture_popup_delete_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_picture_popup_description" />

        <Button
            android:id="@+id/edit_picture_popup_delete_button"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="monospace"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_picture_popup_submit_button"
            app:layout_constraintTop_toBottomOf="@id/edit_picture_popup_description" />

        <Button
            android:id="@+id/edit_picture_popup_cancel_button"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_picture_popup_submit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>